<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewmodel"
			type="com.clonecoding.rabbitmqtest.viewmodel.MainViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.activity.MainActivity">

		<TextView
			android:id="@+id/text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@{viewmodel.text}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:textSize="32sp"
			tools:text="Test"/>

		<Button
			android:id="@+id/exchangeButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/_2_exchange_title"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@id/simpleButton" />

		<Button
			android:id="@+id/simpleButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/_1_simple_title"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@id/nextButton" />

		<Button
			android:id="@+id/nextButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/multi_queue"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>