<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewmodel"
			type="com.clonecoding.rabbitmqtest.viewmodel.SubViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.activity.SubActivity">

		<TextView
			android:id="@+id/queue_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/queue_1"
			android:textColor="@color/purple_700"
			android:textSize="24sp"
			app:layout_constraintBottom_toTopOf="@id/queue_2"
			app:layout_constraintEnd_toStartOf="@id/queue_1_content"
			app:layout_constraintHorizontal_bias="0.1"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed" />

		<TextView
			android:id="@+id/queue_1_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="10dp"
			android:text="@{viewmodel.text1}"
			tools:text="@string/content"
			android:textSize="24sp"
			app:layout_constraintBottom_toBottomOf="@id/queue_1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/queue_1"
			app:layout_constraintTop_toTopOf="@id/queue_1" />

		<TextView
			android:id="@+id/queue_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/queue_2"
			android:textColor="@color/purple_700"
			android:textSize="24sp"
			app:layout_constraintBottom_toTopOf="@id/queue_3"
			app:layout_constraintEnd_toStartOf="@id/queue_2_content"
			app:layout_constraintHorizontal_bias="0.1"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/queue_1" />

		<TextView
			android:id="@+id/queue_2_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="10dp"
			android:text="@{viewmodel.text2}"
			tools:text="@string/content"
			android:textSize="24sp"
			app:layout_constraintBottom_toBottomOf="@id/queue_2"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/queue_2"
			app:layout_constraintTop_toTopOf="@id/queue_2" />


		<TextView
			android:id="@+id/queue_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/queue_3"
			android:textColor="@color/purple_700"
			android:textSize="24sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/queue_3_content"
			app:layout_constraintHorizontal_bias="0.1"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/queue_2" />

		<TextView
			android:id="@+id/queue_3_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="10dp"
			android:text="@{viewmodel.text3}"
			tools:text="@string/content"
			android:textSize="24sp"
			app:layout_constraintBottom_toBottomOf="@id/queue_3"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/queue_3"
			app:layout_constraintTop_toTopOf="@id/queue_3" />

		<Button
			android:id="@+id/start_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/send_amp_recv"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>